--- a/.github/workflows/bonjour.yml
+++ b/.github/workflows/bonjour.yml
@@ -7,5 +7,8 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
+      - run: |
+          sudo apt-get update
+          sudo apt-get install --yes cowsay
       - run: ls -l # Liste les fichier du répertoire courant
       - run: cat README.md | cowsay
