--- a/.github/workflows/bonjour.yml
+++ b/.github/workflows/bonjour.yml
@@ -10,5 +10,4 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: docker image build -t nodejs_image ./
-      - run: docker run nodejs_image
-      - run: npm run lint
+      - run: docker run nodejs_image npm run lint
