--- a/.github/workflows/bonjour.yml
+++ b/.github/workflows/bonjour.yml
@@ -6,5 +6,8 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
+      - uses: hadolint/hadolint-action@v3.1.0
+        with:
+          dockerfile: Dockerfile
       - run: docker image build -t nodejs_image ./
       - run: docker run nodejs_image npm run lint
