--- a/.github/workflows/bonjour.yml
+++ b/.github/workflows/bonjour.yml
@@ -8,3 +8,16 @@ jobs:
       - uses: actions/checkout@v3
       - run: docker image build -t nodejs_image ./
       - run: docker run nodejs_image npm run lint
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          username: yaamto69
+          password: ${{ secrets.DOCKERHUB }}
+      - name: Push if on `main`
+        uses: docker/build-push-action@v4
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          push: true
+          context: ./
+          tags: yaamto69/sayhello:${{ github.ref_name }}
